Added partials and helpers and made more restfull

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,12 +1,5 @@
+<%= erb :'categories/_categories_nav' %>
 <div class="container">
   <h2>Welcome to Here!</h2>
   <p>Perspiciatis repellendus quo et iusto ea autem. Repellendus aliquam facilis. Quas accusantium officiis aut est dignissimos nisi quam. Neque atque voluptatibus iste est. Ut minima mollitia tempora consequatur autem illo sed. Ut iste sit. Quia non perferendis est pariatur. Beatae rem dolores iusto dolores repudiandae dolorem. Laborum porro ut. Aliquid quasi quae quia ipsum consequuntur. Consequuntur natus omnis sit magnam fugit. Sed debitis atque aut reprehenderit aperiam. Impedit sequi ad ut quam quo laborum dolor. Facilis asperiores fuga perspiciatis. Amet eos ipsum qui. Recusandae est veritatis et. Et et reprehenderit sed. Ut enim reprehenderit sit velit et. Voluptatum omnis consequuntur eos rerum aperiam doloremque asperiores. Amet totam in repudiandae earum natus est repellendus. Laboriosam doloribus qui architecto dolore. Repellendus qui odio qui sequi voluptates et.</p>
-</div>
-<div class="side-nav">
-  <h3>Categories:</h3>
-  <ul>
-    <% @categories.each do |category| %>
-      <li><a href="/categories/<%=category.id%>"><%= category.title %></a></li>
-    <% end %>
-  </ul>
 </div>
