--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,1 +1,3 @@
-Welcome to my site!
+<h1> Welcome to WORLD MOST EXCITING SITE! </h1>
+
+<p> Please confirm that you are not a robot and signup for a new account or Login before you can access the contents. </p>
