--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -22,7 +22,7 @@
 <body>
 <div id="content">
   <header>
-    <a href="/"><img src="/img/zenchinese.png" class="logo"></a>
+    <a href="/"><img src="https://www-dev.unicon.net/sites/default/files/Open_Source_Logos/oss_200_logo_0.png" class="logo"></a>
     <div id="login-toolbar">
       <% if current_user %>
         <a href="/logout">Logout</a>
