add error message

--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,4 +1,4 @@
-<form method='GET' action='/trivias'>
+<form method='GET' action='/login/error'>
   Username: <input type='text' placeholder='Username'>
   Password: <input type='password' placeholder='Password'>
   <button> Login </button>
